<resources>
    <string name="sing_in">Sing In</string>
    <string name="eMail">eMail</string>
    <string name="Password">Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="add">Add</string>
    <string name="log_out">Log out</string>
    <string name="user">User:</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="description">Description</string>
    <string name="upolad_image">Upload Image</string>
    <string name="types">types</string>

</resources>
