<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jovan0042.monuments.LoginActivity"
    android:minWidth="150dp"
    android:background="#afbaf6">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eteMail"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/eMail"
        android:textSize="22sp"
        android:singleLine="true"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/Password"
        android:layout_below="@+id/eteMail"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/eteMail"
        android:textSize="22sp"
        android:singleLine="true"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_in"
        android:id="@+id/btnSingIn"
        android:background="#5868be"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:clickable="false"
        android:layout_below="@+id/etPassword"
        android:textSize="18sp"
        android:minWidth="150dp"
        android:onClick="SingInHandler" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        android:id="@+id/btnSingUp"
        android:background="#5868be"
        android:textColor="#ffffff"
        android:clickable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="SingUpHandler" />

</RelativeLayout>
