<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jovan0042.monuments.AddMonumentActivity"
    android:background="#afbaf6">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/name"
        android:layout_below="@+id/ivAddMon"
        android:layout_alignParentStart="true"
        android:lines="1"
        android:maxLines="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etType"
        android:hint="@string/type"
        android:layout_below="@+id/etName"
        android:layout_alignParentStart="true"
        android:lines="1"
        android:maxLines="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etDescription"
        android:layout_below="@+id/etType"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etType"
        android:hint="@string/description"
        android:layout_marginBottom="15dp"
        android:maxLines="5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:id="@+id/btnTakePicture"
        android:background="#5868be"
        android:textColor="#ffffff"
        android:clickable="false"
        android:minWidth="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="takePictureHandler" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:background="#5868be"
        android:textColor="#ffffff"
        android:clickable="false"
        android:minWidth="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="AddHandler" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivAddMon"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:minHeight="200dp"
        android:minWidth="200dp"
        android:onClick="takePictureHandler"
        android:background="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
