<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jovan0042.monuments.MonumentsActivity"
    android:background="#afbaf6">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:background="#5868be"
        android:textColor="#ffffff"
        android:clickable="false"
        android:textSize="18sp"
        android:minWidth="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:onClick="AddClickHandler" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/types"
        android:id="@+id/btnTypes"
        android:background="#5868be"
        android:textColor="#ffffff"
        android:clickable="false"
        android:textSize="18sp"
        android:minWidth="150dp"
        android:singleLine="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:onClick="TypesClickHandler" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eMail"
        android:id="@+id/Type"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5dp" />

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:layout_below="@+id/Type"
        android:layout_above="@+id/btnAdd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffff">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5868bc"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tabAllMonuments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lvAllMon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabMyMonuments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#ffffff">

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lvMyMon" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/log_out"
        android:id="@+id/tvLogOut"
        android:layout_above="@+id/tabHost"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:onClick="LogOutHandler" />

</RelativeLayout>
